--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,5 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "../dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "../client/src/features", "../client/src/store.ts"]
 }
