--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/morgan": "^1.9.9",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
@@ -25,6 +26,7 @@
     "helmet": "^8.1.0",
     "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
